--- a/J04While.html
+++ b/J04While.html
@@ -6,13 +6,15 @@
   <title>Document</title>
   <script>
     console.error("출력1")
-    var i=1;
-    while(i<=5) {
+    // 단순하게 5번 반복하여 i값 출력.
+    var i=1; // 초기값
+    while(i<=5) { // 조건식
       console.log("i="+ i);
       i++;
     }
 
     console.error("출력2")
+    // 수열의 합 출력
     let sum = 0;
     let j = 1;
     while(j<=10) {
@@ -25,14 +27,16 @@
 <body>
   <h2>반복문 - while문</h2>
   <script>
+    // JS의 문서객체를 이용해서 웹브라우저에 내용 출력
     document.write("<h3>출력3 : 구구단</h3>");
     let dan = 2;
     while(dan<=9) {
       let su = 1;
       while(su<=9) {
-        document.write(dan+'*'+su+'='+(dan*su)+'&nbsp;');
+        document.write(dan+'*'+su+'='+(dan*su)+'&nbsp&nbsp;');
         su++;
       }
+      // 1단을 출력한 후 줄바꿈 처리
       document.write('<br>');
       dan++;
     }
@@ -44,6 +48,7 @@
     while(x<=5) {
       var y=1;
       while(y<=5) {
+        // x와 y가 같을때만 1을 출력.
         if(x==y)
           document.write("1 ");
         else
