--- a/01Basic/J01Variable1Type.html
+++ b/01Basic/J01Variable1Type.html
@@ -39,9 +39,9 @@
       console.log("NaN이 아니다. 즉 숫자이다.");
     }
 
-    //string + undefined => 서로 연결됨
+    //string + undefined => 서로 연결됨 -> 자바스크립트undefined
     console.log("str1+str2="+ (str1+str2));
-    //number + string => 서로 연결됨
+    //number + string => 서로 연결됨 -> 10자바스크립트
     console.log("num1+str1="+ (num1+str1));
     
     // JavaScript에서는 기본자료형을 제외한 나머지는 object형으로 간주한다.
