--- a/02Core1/J09Array03.html
+++ b/02Core1/J09Array03.html
@@ -93,6 +93,13 @@
     // 복사본과 원본에 동시에 추가. 즉 같은 배열.
     console.log('newArr3', newArr3);
     console.log('arr4', arr4);  
+
+    
+    // 문자열 배열로 만들기. => ['h', 'e', 'l', 'l', 'o']
+    console.warn("문자열 배열로 만들기");
+    let str = "hello";
+    let strArr = Array.from(str);
+    console.log(strArr);
   </script>
 </body>
 </html>
