--- a/02Core1/J09Array04.html
+++ b/02Core1/J09Array04.html
@@ -53,6 +53,9 @@
     console.log(languages.includes('Java')); // true
     console.log(languages.includes('C#'));  // false
 
+    const lang = "Java"
+    console.log(lang.includes('Ja')); // true
+
   </script>
 </body>
 </html>
