--- a/J13String1.html
+++ b/J13String1.html
@@ -73,7 +73,7 @@
     }
     console.error("퀴즈 > 숫자형식찾기");
     //숫자형식
-    var isNum1 = isNumber("100");
+    var isNum1 = isNumber(100);
     (isNum1 == true) ? console.log("숫자형식") : console.log("숫자형식 아님");
     //숫자형식 아님
     var isNum2 = isNumber("100A");
