--- a/01Basic/J02Operator.html
+++ b/01Basic/J02Operator.html
@@ -9,13 +9,13 @@
   <h2>연산자</h2>
   <script>
     console.error("산술 연산자");
-    console.log("결과1=", 3 % 5 * 2 + 10 / 5);
+    console.log("결과1=", 3 % 5 * 2 + 10 / 5); // 결과: 8 (%,*,/ 먼저 수행)
     console.log("결과2=", 3 / 5);
 
     console.error("비교 연산자");
-    console.log('결과1=', "가나다1">'가나다');
-    console.log('결과2=', 3>9==0);
-    console.log('결과3=', (-1) ? true : false);
+    console.log('결과1=', "가나다1">'가나다'); // 앞에서부터 한글자씩 유니코드 비교. 전부 같다면 더 긴쪽이 큼.
+    console.log('결과2=', 3>9==0); // 연산순서: 3>9 => false / false == 0 => ture (==가 느슨한 비교라서 우선순위가 작다.)
+    console.log('결과3=', (-1) ? true : false); // -1도 true
     console.log('결과4=', (null) ? true : false);
     console.log('결과5=', (10-10) ? true : false);
     console.log('결과6=', ("자바스크립트") ? true : false);
