--- a/BlackJack.html
+++ b/BlackJack.html
@@ -4,8 +4,107 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    *{
+      margin: 0; padding: 0;
+    }
+    
+    /* 게임 이름 */
+    h1{
+      text-align: center;
+      border-top: 3px solid black;
+      border-bottom: 3px solid black;
+      box-shadow: 5px 5px 5px black ;
+      padding: 5px 0; margin-top: 1.5vh;
+    }
+
+    /* 게임판 */
+    section{
+      border: 1px solid red;
+      /* display: grid; */
+      width: 100%; height: 80vh;
+      background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1)), 
+          url(./images/blackjack_table.jpeg);
+      background-size: contain;
+    }
+
+    /* 위아래, card 설정 */
+    .play{
+      border: 1px solid black;
+      display: flex;
+      justify-content: center;
+      padding-top: 5vh;
+    }
+    .card{
+      border: 1px solid black;
+      border-radius: 1vw;
+      width: 11.8vw; height: 17.4vh;
+      margin: auto 2vw;
+    }
+
+    /* 가운데 */
+    .deck{
+      border: 1px solid blue;
+      width: 100%; height: 25vh;
+      display: flex;
+      justify-content: center;
+    }
+    .deck .card{
+      background: url(./images/back_card.gif) 0px 0px;
+      background-size: cover;
+    }
+
+    /* 맨 밑 */
+    .control{
+      border: 1px solid yellow;
+      width: 100%; height: 9vh;
+      display: flex; 
+      justify-content: center; align-items: center;
+      gap: 5vw;
+      position: relative;
+    }
+    .button{
+      width: 12vw; height: 4vh;
+      font-size: 1.3rem; font-weight: bold; line-height: 1.3rem;
+      cursor: pointer; overflow: hidden;
+      border-radius: 1vw;
+    }
+    .myBudget{
+      position: absolute;
+      top: 3vh; right: 3vw;
+      font-size: 1.3rem; line-height: 2.2rem; 
+      text-align: left;
+      width: 17vw; height: 3vh; padding: 0.1rem 1rem;
+      background-color: white;
+      border-radius: 0.5vw;
+    }
+    #budget{
+      margin-left: 0.5rem;
+    }
+
+  </style>
 </head>
 <body>
-  
+  <h1>블랙잭 게임</h1>
+  <section>
+    <div class="play computer">
+      <div class="card">카드1</div>
+      <div class="card">카드2</div>
+      <div class="card">카드3</div>
+    </div>
+    <div class="deck">
+      <div class="card">카드덱</div>
+    </div>
+    <div class="play user">
+      <div class="card">카드1</div>
+      <div class="card">카드2</div>
+      <div class="card">카드3</div>
+    </div>
+    <div class="control">
+      <button type="button" class="button hit">히트(한장더)</button>
+      <button type="button" class="button stand">스탠드(Stop)</button>
+      <div class="myBudget">남은 금액 : <span id="budget">60,000</span></div>
+    </div>
+  </section>
 </body>
 </html>
